objects/CSS_ConnectedDiagnostics__c.object
<CustomObject>
    <description>This object stores and references the 30 day alerts retrieved from Connected Diagnostics for a given engine.</description>
    <fields>
        <fullName>CSSJobID__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>This field is a foreign key relationship to the CSS job order object</description>
        <label>Service Job</label>
        <referenceTo>CSS_Job_Order__c</referenceTo>
        <relationshipLabel>CSS_ConnectedDiagnosticsAlerts</relationshipLabel>
        <relationshipName>CSS_ConnectedDiagnosticsAlerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ESN__c</fullName>
        <description>Captures the Engine Serial Number coming from INSITE.</description>
        <label>ESN</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code_Description__c</fullName>
        <description>Captures Fault code description based primarily out of QSOL.</description>
        <label>Fault Code Description</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fault_Code__c</fullName>
        <description>Stores the Fault code number.
Source : INSITE / Product Connectivity.</description>
        <label>Fault Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Latest_Occurrence_Date_Time__c</fullName>
        <description>Latest fault code occurrence - Date/Time,which is updated based on Connected Diagnostics.</description>
        <label>Latest Occurrence Date Time</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mileage__c</fullName>
        <description>Stores the Engine Mileage, which is an User Input .</description>
        <label>Mileage</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Response_Version__c</fullName>
        <description>Stores the response version received from Telematics</description>
        <label>Response Version</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Distinct_Faults__c</fullName>
        <description>Stores the total distinct Fault Codes count.
Source : Connected Diagnostics</description>
        <label>Total Distinct Faults</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Occurrence_Count__c</fullName>
        <description>Total Fault Code Occurrence Count
Source : Connected Diagnostics</description>
        <label>Total Occurrence Count</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UOM__c</fullName>
        <description>Unit of measure - KM, MI or HR</description>
        <label>UOM</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>WorkOrder</referenceTo>
        <relationshipLabel>CSS_ConnectedDiagnosticsAlerts</relationshipLabel>
        <relationshipName>CSS_ConnectedDiagnosticsAlerts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>CSS_ConnectedDiagnosticsAlert</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CSS_ConnectedDiagnostics Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CSS_ConnectedDiagnosticsAlerts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>